testsuite/tests/rep-poly/T24769b.stderr
T24769b.hs:6:1: error: [GHC-94185]
    Can't quantify over ‘r’
      bound by the partial type signature: f :: (_ :: TYPE r)

