testsuite/tests/rep-poly/T24769b.hs
module T24769b where

import GHC.Exts

f :: (_ :: TYPE r)
f = f
